# targetinfo-rs

./: Cargo.toml  README.md
src/: main.rs  output.rs
