[package]
name = "targetinfo"
version = "0.1.0"
edition = "2024"

[dependencies]
smb = "0.11.1"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
bytes = "1"
ntlmclient = "0.2.0"
sspi = "0.18.7"
clap = { version = "4.5.56", features = ["derive"] }
colored = "3.1.1"

[patch.crates-io]
sspi = { git = "https://github.com/bwpge/sspi-rs.git" }
